# TFG-ING-INFORMATICA

./: README.md
MODELOS_ENTRENADOS/modelo_ext_rgb/: results.csv
MODELOS_ENTRENADOS/modelo_ext_term/: args.yaml  results.csv
MODELOS_ENTRENADOS/modelo_int_rgb/: results.csv
MODELOS_ENTRENADOS/modelo_int_term/: results.csv
NOTEBOOKS_ENTRENAR/: modelo_exterior_term.ipynb  modelo_interior_rgb.ipynb  modelo_interior_term.ipynb
ROS/fusion_msgs/: CMakeLists.txt  package.xml
ROS/fusion_msgs/msg/: BoundingBox.msg  Cluster.msg  Detection.msg  DetectionArray.msg
ROS/fusion_node/launch/: danger_car.launch  danger_hidden_person.launch  danger_immobile_person.launch  fusion_video_exterior.launch  fusion_video_interior.launch  fusion_yolo_visualizer_iou.launch
ROS/fusion_node/scripts/: centroid_tracker.py  danger_car.py  danger_hidden_person.py  danger_immobile_person.py  fusion_yolo_visualizer_ext.py  fusion_yolo_visualizer_int.py  fusion_yolo_visualizer_iou.py  publisher_yolo_rgb.py  publisher_yolo_term.py  utils_vision.py
ROS/scripts_extra/: depth_image_saver.py  fusion_yolo_debug.py  fusion_yolo_view.py  image_saver_diff.py  measure_sync_drift.py  pointcloud_clustering_ros.py  pointcloud_saver.py  pointnet_predict_ros.py  video_subscriber.py  yolo_ros.py
SCRIPTS/: calculate_homography.py  pointcloud_clustering.py  pointcloud_converter_ply_txt.py  pointcloud_reader_from_txt.py  pointnet_predict.py  pointnet_predict_off.py
